# atomberg-fan-remote

./: Cargo.toml  README.md
.github/workflows/: android-release.yml  release-dist.yml
fastlane/metadata/android/en-US/changelogs/: 100000.txt  100020.txt  100040.txt  100050.txt  100060.txt  100070.txt  100080.txt  16777482.txt  16777483.txt  16777484.txt  16777485.txt  16777486.txt  16777487.txt  16777488.txt  16777490.txt  16777491.txt  16777492.txt  16777729.txt  16777730.txt  16777731.txt  16777733.txt  16777735.txt
src/: ir.rs  lib.rs  profile.rs  ui_handlers.rs
src/ui/: main.slint
