[package]
name = "atomberg-remote"
version = "0.1.15"
edition = "2024"
build = "build.rs"
rust-version = "1.90.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
slint = { version = "1.13", default-features = false, features = [
    "backend-android-activity-06",
    "renderer-femtovg",
    "compat-1-2",
] }
jni = "0.21"
ndk-context = "0.1"
log = "0.4"
android_logger = "0.15"
slint-build = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[build-dependencies]
slint-build = "1.13"

[package.metadata.android]
package = "dev.mlm.atombergremote"
apk_name = "AtombergRemote"
label = "Atomberg Remote"
build_targets = ["aarch64-linux-android"]

# [package.metadata.android.application]
# icon = "fastlane/metadata/android/en-US/images/icon.png"

[package.metadata.android.sdk]
version_code = 16777487
min_sdk_version = 26
target_sdk_version = 35

[[package.metadata.android.uses_feature]]
name = "android.hardware.consumerir"
required = true

[[package.metadata.android.uses_permission]]
name = "android.permission.TRANSMIT_IR"
